--- a/StarWarsRestApp/package.json
+++ b/StarWarsRestApp/package.json
@@ -11,13 +11,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.0.0",
+    "@angular/cdk": "^15.0.3",
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
     "@angular/forms": "^15.0.0",
+    "@angular/material": "^15.0.3",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@ngneat/until-destroy": "^9.2.2",
+    "angular-datatables": "^14.0.2",
+    "bootstrap": "^5.2.3",
+    "datatables.net": "^1.13.1",
+    "datatables.net-dt": "^1.13.1",
+    "jquery": "^3.6.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -26,7 +34,9 @@
     "@angular-devkit/build-angular": "^15.0.4",
     "@angular/cli": "~15.0.4",
     "@angular/compiler-cli": "^15.0.0",
+    "@types/datatables.net": "^1.10.24",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.14",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
