--- a/StarWarsRestApp/package.json
+++ b/StarWarsRestApp/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^14.0.0",
     "@ngneat/until-destroy": "^9.2.2",
+    "ag-grid-angular": "^28.2.1",
+    "ag-grid-community": "^28.2.1",
     "angular-datatables": "^14.0.2",
     "bootstrap": "^5.2.3",
     "datatables.net": "^1.13.1",
