--- a/StarWarsRestApp/package.json
+++ b/StarWarsRestApp/package.json
@@ -28,7 +28,9 @@
     "bootstrap": "^5.2.3",
     "datatables.net": "^1.13.1",
     "datatables.net-dt": "^1.13.1",
+    "file-saver": "^2.0.5",
     "jquery": "^3.6.2",
+    "mat-table-filter": "^10.2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -38,6 +40,7 @@
     "@angular/cli": "~15.0.4",
     "@angular/compiler-cli": "^15.0.0",
     "@types/datatables.net": "^1.10.24",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.14",
     "jasmine-core": "~4.5.0",
